src/test/ui/consts/const-eval/promoted_errors2.stderr
error: attempt to subtract with overflow
  --> $DIR/promoted_errors2.rs:7:20
   |
LL |     println!("{}", 0u32 - 1);
   |                    ^^^^^^^^
   |
note: lint level defined here
  --> $DIR/promoted_errors2.rs:4:9
   |
LL | #![deny(const_err)]
   |         ^^^^^^^^^

error: attempt to subtract with overflow
  --> $DIR/promoted_errors2.rs:9:14
   |
LL |     let _x = 0u32 - 1;
   |              ^^^^^^^^

error: attempt to divide by zero
  --> $DIR/promoted_errors2.rs:11:20
   |
LL |     println!("{}", 1/(1-1));
   |                    ^^^^^^^

error: reaching this expression at runtime will panic or abort
  --> $DIR/promoted_errors2.rs:11:20
   |
LL |     println!("{}", 1/(1-1));
   |                    ^^^^^^^ dividing by zero

error: attempt to divide by zero
  --> $DIR/promoted_errors2.rs:14:14
   |
LL |     let _x = 1/(1-1);
   |              ^^^^^^^

error: attempt to divide by zero
  --> $DIR/promoted_errors2.rs:16:20
   |
LL |     println!("{}", 1/(false as u32));
   |                    ^^^^^^^^^^^^^^^^

error: reaching this expression at runtime will panic or abort
  --> $DIR/promoted_errors2.rs:16:20
   |
LL |     println!("{}", 1/(false as u32));
   |                    ^^^^^^^^^^^^^^^^ dividing by zero

error: attempt to divide by zero
  --> $DIR/promoted_errors2.rs:19:14
   |
LL |     let _x = 1/(false as u32);
   |              ^^^^^^^^^^^^^^^^

error: aborting due to 8 previous errors

